Update WrapperClassExample.java